fixed empty dir

--- a/spirits_bringup/CMakeLists.txt
+++ b/spirits_bringup/CMakeLists.txt
@@ -32,7 +32,7 @@ endif()
 # Install
 ################################################################################
 install(
-  DIRECTORY launch config
+  DIRECTORY launch
   DESTINATION share/${PROJECT_NAME}
 )
 
